--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
+<head th:replace="_fragments :: head(~{::title})">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>分类</title>
@@ -12,7 +12,7 @@
 <body>
 
 	<!-- 导航 -->
-	<nav
+	<nav th:replace="_fragments :: menu(2)"
 		class="ui inverted attached segment m-padding-tb-mini m-shadow-small">
 		<div class="ui container">
 			<div class="ui inverted secondary stackable menu">
@@ -231,7 +231,8 @@
 
 
 	<!-- 底部footer -->
-	<footer class="ui inverted vertical segment m-padding-tb-massive">
+	<footer th:replace="_fragments :: footer"
+		class="ui inverted vertical segment m-padding-tb-massive">
 		<div class="ui center aligned container">
 			<div class="ui inverted divided stackable grid">
 				<div class="three wide column">
@@ -274,11 +275,12 @@
 				2016 - 2017 Lirenmi Designed by Lirenmi</p>
 		</div>
 	</footer>
-
+	<!--/*/<th:block th:replace="_fragments :: script">/*/-->
 	<script
 		src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 	<script
 		src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+	<!--/*/</th:block>/*/-->
 	<script>
 		$('.menu.toggle').click(function() {
 			$('.m-item').toggleClass('m-mobile-hide');
@@ -286,38 +288,5 @@
 	</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
