--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -11,12 +11,12 @@
 <body>
 
 	<!-- 导航 -->
-	<nav th:replace="admin/_fragments :: menu(1)"
+	<nav  th:replace="admin/_fragments :: menu(0)"
 		class="ui inverted attached segment m-padding-tb-mini m-shadow-small">
 		<div class="ui container">
 			<div class="ui inverted secondary stackable menu">
 				<h2 class="ui teal header item">管理后台</h2>
-				<a href="#" class="m-item item active m-mobile-hide"><i
+				<a href="#" class="m-item item m-mobile-hide"><i
 					class="home icon"></i>博客</a> <a href="#"
 					class="m-item item m-mobile-hide"><i class="idea icon"></i>分类</a> <a
 					href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>标签</a>
@@ -43,87 +43,20 @@
 		</a>
 	</nav>
 	
-	<div class="ui attached pointing menu">
-		<div class="ui container">
-			<div class="right menu">
-				<a href="#" class="item">发布</a>
-				<a href="#" class="teal active item">列表</a>
-			</div>
-		</div>
-	</div>
-	
 	<!-- 中间内容 -->
 	<div class="m-container-small m-padding-tb-large">
 		<div class="ui container">
-			<form action="#" method class="ui segment form">
-				<div class="inline fields">
-					<div class="field">
-						<input type="text" name="title" placeholder="标题">
-					</div>
-					<div class="field">
-						<div class="ui selection dropdown">
-							<input type="hidden" name="type">
-							<i class="dropdown icon"></i>
-							<div class="default text">分类</div>
-							<div class="menu">
-								<div class="item" data-value="1">错误日志</div>
-								<div class="item" data-value="2">开发者手册</div>
-							</div>
-						</div>
-					</div>
-					<div class="field">
-						<div class="ui checkbox">
-							<input type="checkbox" name="recommend" id="recommend">
-							<label for="recommend">推荐</label>
-						</div>
-					</div>
-					<div class="field">
-						<button class="ui teal basic button"><i class="search icon"></i>搜索</button>
-					</div>
-				</div>
-			</form>
-			
-			<table class="ui celled table">
-				<thead>
-					<tr>
-						<th></th>
-						<th>标题</th>
-						<th>类型</th>
-						<th>推荐</th>
-						<th>更新时间</th>
-						<th>操作</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>刻意联系清单</td>
-						<td>认知升级</td>
-						<td>是</td>
-						<td>2021-11-11 11:11</td>
-						<td>
-							<a class="ui mini teal basic button">编辑</a>
-							<a class="ui mini red basic button">删除</a>
-						</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<tr>
-						<th colspan="6">
-							<div class="ui mini pagination menu">
-								<a class="item">上一页</a>
-								<a class="item">下一页</a>
-							</div>
-							<a class="ui rigth floated teal basic button">新增</a>
-						</th>
-					</tr>
-				</tfoot>
-			</table>
+			<div class="ui success large message">
+				<h3>Hi,</h3>
+				<p>欢迎登录！</p>
+			</div>
+			<img src="https://unsplash.it/1000/400?image=1005" alt="" class="ui rounded bordered fluid image">
 		</div>
 	</div>
 
+
 	<!-- 底部footer -->
-	<footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padding-tb-massive">
+	<footer  th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padding-tb-massive">
 		<div class="ui center aligned container">
 			<div class="ui inverted divided stackable grid">
 				<div class="three wide column">
