--- a/src/main/resources/templates/admin/type-input.html
+++ b/src/main/resources/templates/admin/type-input.html
@@ -3,7 +3,7 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>博客发布</title>
+<title>分类新增</title>
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
 <link rel="stylesheet" href="../../static/css/me.css">
@@ -13,7 +13,7 @@
 <body>
 
 	<!-- 导航 -->
-	<nav th:replace="admin/_fragments :: menu(1)"
+	<nav th:replace="admin/_fragments :: menu(2)"
 		class="ui inverted attached segment m-padding-tb-mini m-shadow-small">
 		<div class="ui container">
 			<div class="ui inverted secondary stackable menu">
@@ -57,99 +57,11 @@
 	<div class="m-container-small m-padding-tb-large">
 		<div class="ui container">
 			<form action="#" method="post" class="ui form">
-				<div class="required field">
-					<div class="ui left labeled input">
-						<div class="ui selection compact teal basic dropdown label">
-							<input type="hidden" value="原创"> <i class="dropdown icon"></i>
-							<div class="text">原创</div>
-							<div class="menu">
-								<div class="item" data-value="原创">原创</div>
-								<div class="item" data-value="转载">转载</div>
-								<div class="item" data-value="翻译">翻译</div>
-							</div>
-						</div>
-						<input type="text" name="title" placeholder="标题">
-					</div>
-				</div>
-
-				<div class="field">
-					<div id="md-content" style="z-index: 1 !important;">
-						<textarea placeholder="博客内容" name="content"
-							style="displace: none;">
-							[TOC]
-
-#### Disabled options
-
-- TeX (Based on KaTeX);
-- Emoji;
-- Task lists;
-- HTML tags decode;
-- Flowchar and Sequence Diagram;
-						</textarea>
-					</div>
-				</div>
-
-				<div class="two fields">
-					<div class="field">
-						<div class="ui left labeled action input">
-							<label class="ui compact teal basic label">分类</label>
-							<div class="ui fluid selection dropdown">
-								<input type="hidden" name=type> <i class="dropdown icon"></i>
-								<div class="default text">分类</div>
-								<div class="menu">
-									<div class="item" data-value="1">错误日志</div>
-									<div class="item" data-value="2">开发者手册</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="field">
-						<div class="ui left labeled action input">
-							<label class="ui compact teal basic label">标签</label>
-							<div class="ui fluid multiple search selection dropdown">
-								<input type="hidden" name="tag"> <i
-									class="dropdown icon"></i>
-								<div class="default text">标签</div>
-								<div class="menu">
-									<div class="item" data-value="1">java</div>
-									<div class="item" data-value="2">c++</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="inline fields">
-					<div class="field">
-						<div class="ui checkbox">
-							<input type="checkbox" id="recommend" name="recommend" checked
-								class="hidden"> <label for="recommend">推荐</label>
-						</div>
-					</div>
-					<div class="field">
-						<div class="ui checkbox">
-							<input type="checkbox" id="shareInfo" name="shareInfo"
-								class="hidden"> <label for="shareInfo">转载声明</label>
-						</div>
-					</div>
-					<div class="field">
-						<div class="ui checkbox">
-							<input type="checkbox" id="appreciation" name="appreciation"
-								class="hidden"> <label for="appreciation">赞赏</label>
-						</div>
-					</div>
-					<div class="field">
-						<div class="ui checkbox">
-							<input type="checkbox" id="comment" name="comment" class="hidden">
-							<label for="comment">评论</label>
-						</div>
-					</div>
-				</div>
 
 				<div class="field">
 					<div class="ui left labeled input">
-						<label class="ui teal basic label">首图</label> <input type="text"
-							name="indexPicture" placeholder="首图引用地址">
+						<label class="ui teal basic label">名称</label> <input type="text"
+							name="name" placeholder="分类名称">
 					</div>
 				</div>
 
@@ -158,13 +70,16 @@
 				<div class="ui right aligned container">
 					<button type="button" class="ui button"
 						onclick="window.history.go(-1)">返回</button>
-					<button class="ui secondary button">保存</button>
-					<button class="ui teal button">发布</button>
+					<button class="ui teal button">提交</button>
 				</div>
 			</form>
 		</div>
 	</div>
-
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
 
 	<!-- 底部footer -->
 	<footer  th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padding-tb-massive">
@@ -218,16 +133,6 @@
 	<!--/*/</th:block>/*/-->
 	<script src="../../static/lib/editormd/editormd.min.js"></script>
 	<script>
-		// 舒适话Markdown编辑器
-		var contentEditor;
-		$(function() {
-			contentEditor = editormd("md-content", {
-				width : "100%",
-				height : 640,
-				syncScrolling : "single",
-				path : "../static/lib/editormd/lib/"
-			});
-		});
 
 		$('.menu.toggle').click(function() {
 			$('.m-item').toggleClass('m-mobile-hide');
