--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -3,7 +3,7 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>博客管理</title>
+<title>分类管理</title>
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
 <link rel="stylesheet" href="../../static/css/me.css">
@@ -11,7 +11,7 @@
 <body>
 
 	<!-- 导航 -->
-	<nav th:replace="admin/_fragments :: menu(1)"
+	<nav th:replace="admin/_fragments :: menu(2)"
 		class="ui inverted attached segment m-padding-tb-mini m-shadow-small">
 		<div class="ui container">
 			<div class="ui inverted secondary stackable menu">
@@ -55,55 +55,22 @@
 	<!-- 中间内容 -->
 	<div class="m-container-small m-padding-tb-large">
 		<div class="ui container">
-			<form action="#" method class="ui segment form">
-				<div class="inline fields">
-					<div class="field">
-						<input type="text" name="title" placeholder="标题">
-					</div>
-					<div class="field">
-						<div class="ui selection dropdown">
-							<input type="hidden" name="type">
-							<i class="dropdown icon"></i>
-							<div class="default text">分类</div>
-							<div class="menu">
-								<div class="item" data-value="1">错误日志</div>
-								<div class="item" data-value="2">开发者手册</div>
-							</div>
-						</div>
-					</div>
-					<div class="field">
-						<div class="ui checkbox">
-							<input type="checkbox" name="recommend" id="recommend">
-							<label for="recommend">推荐</label>
-						</div>
-					</div>
-					<div class="field">
-						<button class="ui teal basic button"><i class="search icon"></i>搜索</button>
-					</div>
-				</div>
-			</form>
 			
 			<table class="ui celled table">
 				<thead>
 					<tr>
 						<th></th>
-						<th>标题</th>
-						<th>类型</th>
-						<th>推荐</th>
-						<th>更新时间</th>
+						<th>名称</th>
 						<th>操作</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
-						<td>1</td>
-						<td>刻意联系清单</td>
-						<td>认知升级</td>
-						<td>是</td>
-						<td>2021-11-11 11:11</td>
+					<tr th:each="type,iterStat:${page.content}">
+						<td th:text="${iterStat.count}">1</td>
+						<td th:text="${type.name}">刻意联系清单</td>
 						<td>
-							<a class="ui mini teal basic button">编辑</a>
-							<a class="ui mini red basic button">删除</a>
+							<a href="#" th:href="@{/admin/types/{id}/input(id=${type.id})}" class="ui mini teal basic button">编辑</a>
+							<a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui mini red basic button">删除</a>
 						</td>
 					</tr>
 				</tbody>
@@ -111,10 +78,10 @@
 					<tr>
 						<th colspan="6">
 							<div class="ui mini pagination menu">
-								<a class="item">上一页</a>
-								<a class="item">下一页</a>
+								<a th:href="@{/admin/types(page=${page.number-1})}" class="item">上一页</a>
+								<a th:href="@{/admin/types(page=${page.number+1})}" class="item">下一页</a>
 							</div>
-							<a class="ui rigth floated teal basic button">新增</a>
+							<a th:href="@{/admin/types/input}" class="ui right floated teal basic button">新增</a>
 						</th>
 					</tr>
 				</tfoot>
