--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -56,8 +56,7 @@
 	<!-- 中间内容 -->
 	<div class="m-container-small m-padding-tb-large">
 		<div class="ui container">
-			<form action="#" method="post" class="ui form">
-
+			<form action="#" th:action="@{/admin/types}" method="post" class="ui form">
 				<div class="field">
 					<div class="ui left labeled input">
 						<label class="ui teal basic label">名称</label> <input type="text"
@@ -70,7 +69,7 @@
 				<div class="ui right aligned container">
 					<button type="button" class="ui button"
 						onclick="window.history.go(-1)">返回</button>
-					<button class="ui teal button">提交</button>
+					<button class="ui teal submit button">提交</button>
 				</div>
 			</form>
 		</div>
