--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -48,7 +48,8 @@
 	<div class="ui attached pointing menu">
 		<div class="ui container">
 			<div class="right menu">
-				<a href="#" class="item active">发布</a> <a href="#" class="teal item">列表</a>
+				<a href="#" th:href="@{/admin/types/input}" class="item active">新增</a>
+				<a href="#" th:href="@{/admin/types}" class="teal item">列表</a>
 			</div>
 		</div>
 	</div>
@@ -56,15 +57,23 @@
 	<!-- 中间内容 -->
 	<div class="m-container-small m-padding-tb-large">
 		<div class="ui container">
-			<form action="#" th:action="@{/admin/types}" method="post" class="ui form">
-				<div class="field">
+			<form action="#" th:action="*{id}==null ? @{/admin/types} : @{/admin/types/{id}(id=*{id})}" method="post" th:object="${type}" class="ui form">
+				<input type="hidden" name="id" th:value="*{id}">
+				<div class="required field">
 					<div class="ui left labeled input">
-						<label class="ui teal basic label">名称</label> <input type="text"
-							name="name" placeholder="分类名称">
+						<label class="ui teal basic label">名称</label>
+						<input type="text" name="name" placeholder="分类名称" th:value="*{name}">
 					</div>
 				</div>
 
 				<div class="ui error message"></div>
+				<!--/*/
+				<div class="ui negative message" th:if="${#fields.hasErrors('name')}">
+					<i class="close icon"></i>
+					<div class="header">验证失败</div>
+					<p th:errors="*{name}">提交信息不符合规则</p>
+				</div>
+				/*/-->
 
 				<div class="ui right aligned container">
 					<button type="button" class="ui button"
@@ -144,10 +153,10 @@
 		$('.ui.form').form({
 			fields : {
 				title : {
-					identifier : 'title',
+					identifier : 'name',
 					rules : [ {
 						type : 'empty',
-						prompt : '标题：请输入博客标题'
+						prompt : '标题：请输入分类名称。'
 					} ]
 				}
 			}
