--- a/src/main/resources/templates/admin/tags-input.html
+++ b/src/main/resources/templates/admin/tags-input.html
@@ -3,10 +3,12 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>标签管理</title>
+<title>标签新增</title>
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
 <link rel="stylesheet" href="../../static/css/me.css">
+<link rel="stylesheet"
+	href="../../static/lib/editormd/css/editormd.min.css">
 </head>
 <body>
 
@@ -42,66 +44,60 @@
 			<i class="sidebar icon"></i>
 		</a>
 	</nav>
-	
+
 	<div class="ui attached pointing menu">
 		<div class="ui container">
 			<div class="right menu">
-				<a href="#" th:href="@{/admin/tags/input}" class="item">新增</a>
-				<a href="#" th:href="@{/admin/tags}" class="teal active item">列表</a>
+				<a href="#" th:href="@{/admin/tags/input}" class="item active">新增</a>
+				<a href="#" th:href="@{/admin/tags}" class="teal item">列表</a>
 			</div>
-		</div>
-	</div>
-	
-	<!-- 中间内容 -->
-	<div class="m-container-small m-padding-tb-large">
-		<div class="ui container">
-			<div class="ui success message" th:unless="${#strings.isEmpty(message)}">
-				<i class="close icon"></i>
-				<div class="header">提示：</div>
-				<p th:text="${message}">恭喜，操作成功！</p>
-			</div>
-			<table class="ui celled table">
-				<thead>
-					<tr>
-						<th></th>
-						<th>名称</th>
-						<th>操作</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="tag,iterStat:${page.content}">
-						<td th:text="${iterStat.count}">1</td>
-						<td th:text="${tag.name}">刻意联系清单</td>
-						<td>
-							<a href="#" th:href="@{/admin/tags/{id}/input(id=${tag.id})}" class="ui mini teal basic button">编辑</a>
-							<a href="#" th:href="@{/admin/tags/{id}/delete(id=${tag.id})}" class="ui mini red basic button">删除</a>
-						</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<tr>
-						<th colspan="6">
-							<div class="ui mini pagination menu" th:if="${page.totalPages} > 1">
-								<a th:href="@{/admin/tags(page=${page.number-1})}" class="item" th:unless="${page.first}">上一页</a>
-								<a th:href="@{/admin/tags(page=${page.number+1})}" class="item" th:unless="${page.last}">下一页</a>
-							</div>
-							<a th:href="@{/admin/tags/input}" class="ui right floated teal basic button">新增</a>
-						</th>
-					</tr>
-				</tfoot>
-			</table>
 		</div>
 	</div>
 
+	<!-- 中间内容 -->
+	<div class="m-container-small m-padding-tb-large">
+		<div class="ui container">
+			<form action="#" th:action="*{id}==null ? @{/admin/tags} : @{/admin/tags/{id}(id=*{id})}" method="post" th:object="${tag}" class="ui form">
+				<input type="hidden" name="id" th:value="*{id}">
+				<div class="required field">
+					<div class="ui left labeled input">
+						<label class="ui teal basic label">名称</label>
+						<input type="text" name="name" placeholder="分类名称" th:value="*{name}">
+					</div>
+				</div>
+
+				<div class="ui error message"></div>
+				<!--/*/
+				<div class="ui negative message" th:if="${#fields.hasErrors('name')}">
+					<i class="close icon"></i>
+					<div class="header">验证失败</div>
+					<p th:errors="*{name}">提交信息不符合规则</p>
+				</div>
+				/*/-->
+
+				<div class="ui right aligned container">
+					<button type="button" class="ui button"
+						onclick="window.history.go(-1)">返回</button>
+					<button class="ui teal submit button">提交</button>
+				</div>
+			</form>
+		</div>
+	</div>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+
 	<!-- 底部footer -->
-	<footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padding-tb-massive">
+	<footer  th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padding-tb-massive">
 		<div class="ui center aligned container">
 			<div class="ui inverted divided stackable grid">
 				<div class="three wide column">
 					<div class="ui inverted link list">
 						<div class="item">
-							<img src="../../static/images/wechat.jpg" class="ui rounded image"
-								alt="" style="width: 110px;">
+							<img src="../../static/images/wechat.jpg"
+								class="ui rounded image" alt="" style="width: 110px;">
 						</div>
 					</div>
 				</div>
@@ -143,7 +139,9 @@
 	<script
 		src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 	<!--/*/</th:block>/*/-->
+	<script src="../../static/lib/editormd/editormd.min.js"></script>
 	<script>
+
 		$('.menu.toggle').click(function() {
 			$('.m-item').toggleClass('m-mobile-hide');
 		});
@@ -151,9 +149,17 @@
 		$('.ui.dropdown').dropdown({
 			on : 'hover'
 		});
-		// 消息提示关闭初始化
-		$('.message .close').on('click', function() {
-			$(this).closest('.message').transition('fade');
+
+		$('.ui.form').form({
+			fields : {
+				title : {
+					identifier : 'name',
+					rules : [ {
+						type : 'empty',
+						prompt : '标题：请输入标签名称。'
+					} ]
+				}
+			}
 		});
 	</script>
 </body>
