--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -54,9 +54,10 @@
 	</div>
 
 	<!-- 中间内容 -->
-	<div class="m-container-small m-padding-tb-large">
+	<div class="m-container m-padding-tb-large">
 		<div class="ui container">
-			<form action="#" method="post" class="ui form">
+			<form id="blog-form" action="#" th:action="@{/admin/blogs}" method="post" class="ui form">
+				<input type="hidden" name="published">
 				<div class="required field">
 					<div class="ui left labeled input">
 						<div class="ui selection compact teal basic dropdown label">
@@ -72,33 +73,21 @@
 					</div>
 				</div>
 
-				<div class="field">
+				<div class="required field">
 					<div id="md-content" style="z-index: 1 !important;">
-						<textarea placeholder="博客内容" name="content"
-							style="displace: none;">
-							[TOC]
-
-#### Disabled options
-
-- TeX (Based on KaTeX);
-- Emoji;
-- Task lists;
-- HTML tags decode;
-- Flowchar and Sequence Diagram;
-						</textarea>
+						<textarea placeholder="博客内容" name="content" style="displace: none;"></textarea>
 					</div>
 				</div>
 
 				<div class="two fields">
-					<div class="field">
+					<div class="required field">
 						<div class="ui left labeled action input">
 							<label class="ui compact teal basic label">分类</label>
 							<div class="ui fluid selection dropdown">
-								<input type="hidden" name=type> <i class="dropdown icon"></i>
+								<input type="hidden" name="type.id"> <i class="dropdown icon"></i>
 								<div class="default text">分类</div>
 								<div class="menu">
-									<div class="item" data-value="1">错误日志</div>
-									<div class="item" data-value="2">开发者手册</div>
+									<div th:each="type : ${types}" th:data-value="${type.id}" th:text="${type.name}" class="item" data-value="1">错误日志</div>
 								</div>
 							</div>
 						</div>
@@ -107,15 +96,21 @@
 						<div class="ui left labeled action input">
 							<label class="ui compact teal basic label">标签</label>
 							<div class="ui fluid multiple search selection dropdown">
-								<input type="hidden" name="tag"> <i
+								<input type="hidden" name="tagIds"> <i
 									class="dropdown icon"></i>
 								<div class="default text">标签</div>
 								<div class="menu">
-									<div class="item" data-value="1">java</div>
-									<div class="item" data-value="2">c++</div>
+									<div th:each="tag : ${tags}" class="item" data-value="1" th:data-value="${tag.id}" th:text="${tag.name}">java</div>
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+
+				<div class="required field">
+					<div class="ui left labeled input">
+						<label class="ui teal basic label" for="firstPicture">首图</label>
+						<input type="text" name="firstPicture" placeholder="首图引用地址">
 					</div>
 				</div>
 
@@ -128,8 +123,8 @@
 					</div>
 					<div class="field">
 						<div class="ui checkbox">
-							<input type="checkbox" id="shareInfo" name="shareInfo"
-								class="hidden"> <label for="shareInfo">转载声明</label>
+							<input type="checkbox" id="shareStatement" name="shareStatement"
+								class="hidden"> <label for="shareStatement">转载声明</label>
 						</div>
 					</div>
 					<div class="field">
@@ -140,16 +135,9 @@
 					</div>
 					<div class="field">
 						<div class="ui checkbox">
-							<input type="checkbox" id="comment" name="comment" class="hidden">
-							<label for="comment">评论</label>
+							<input type="checkbox" id="commentable" name="commentable" class="hidden">
+							<label for="commentable">评论</label>
 						</div>
-					</div>
-				</div>
-
-				<div class="field">
-					<div class="ui left labeled input">
-						<label class="ui teal basic label">首图</label> <input type="text"
-							name="indexPicture" placeholder="首图引用地址">
 					</div>
 				</div>
 
@@ -158,8 +146,8 @@
 				<div class="ui right aligned container">
 					<button type="button" class="ui button"
 						onclick="window.history.go(-1)">返回</button>
-					<button class="ui secondary button">保存</button>
-					<button class="ui teal button">发布</button>
+					<button type="button" id="save-btn" class="ui secondary button">保存</button>
+					<button type="button" id="publish-btn" class="ui teal button">发布</button>
 				</div>
 			</form>
 		</div>
@@ -225,7 +213,7 @@
 				width : "100%",
 				height : 640,
 				syncScrolling : "single",
-				path : "../static/lib/editormd/lib/"
+				path : "/lib/editormd/lib/"
 			});
 		});
 
@@ -245,8 +233,39 @@
 						type : 'empty',
 						prompt : '标题：请输入博客标题'
 					} ]
+				},
+				content : {
+					identifier : 'content',
+					rules : [ {
+						type : 'empty',
+						prompt : '标题：请输入博客内容'
+					} ]
+				},
+				typeId : {
+					identifier : 'typeId',
+					rules : [ {
+						type : 'empty',
+						prompt : '标题：请输入博客分类'
+					} ]
+				},
+				firstPicture : {
+					identifier : 'firstPicture',
+					rules : [ {
+						type : 'empty',
+						prompt : '标题：请输入首图地址'
+					} ]
 				}
 			}
+		});
+		
+		$('#save-btn').click(function() {
+			$('[name="published"]').val(false);
+			$('#blog-form').submit();
+		});
+		
+		$('#publish-btn').click(function() {
+			$('[name="published"]').val(true);
+			$('#blog-form').submit();
 		});
 	</script>
 </body>
