--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -62,16 +62,19 @@
 						<input type="text" name="title" placeholder="标题">
 					</div>
 					<div class="field">
-						<div class="ui selection dropdown">
-							<input type="hidden" name="typeId">
-							<i class="dropdown icon"></i>
-							<div class="default text">分类</div>
-							<div class="menu">
-								<div th:each="type : ${types}" th:data-value="${type.id}" th:text="${type.name}" class="item" data-value="1">错误日志</div>
-								<!--/*-->
-								<div class="item" data-value="2">开发者手册</div>
-								<!--*/-->
+						<div class="ui labeled action input">
+							<div class="ui type selection dropdown">
+								<input type="hidden" name="typeId">
+								<i class="dropdown icon"></i>
+								<div class="default text">分类</div>
+								<div class="menu">
+									<div th:each="type : ${types}" th:data-value="${type.id}" th:text="${type.name}" class="item" data-value="1">错误日志</div>
+									<!--/*-->
+									<div class="item" data-value="2">开发者手册</div>
+									<!--*/-->
+								</div>
 							</div>
+							<button id="clear-btn" class="ui compact button">clear</button>
 						</div>
 					</div>
 					<div class="field">
@@ -93,6 +96,7 @@
 							<th>标题</th>
 							<th>类型</th>
 							<th>推荐</th>
+							<th>草稿/发布</th>
 							<th>更新时间</th>
 							<th>操作</th>
 						</tr>
@@ -103,6 +107,7 @@
 							<td th:text="${blog.title}">刻意联系清单</td>
 							<td th:text="${blog.type.name}">认知升级</td>
 							<td th:text="${blog.recommend} ? '是' : '否'">是</td>
+							<td th:text="${blog.published} ? '草稿' : '发布'">草稿</td>
 							<td th:text="${blog.updateTime}">2021-11-11 11:11</td>
 							<td>
 								<a th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini teal basic button">编辑</a>
@@ -112,16 +117,22 @@
 					</tbody>
 					<tfoot>
 						<tr>
-							<th colspan="6">
+							<th colspan="7">
 								<div class="ui mini pagination menu" th:if="${page.totalPages}>1">
 									<a onclick="page(this)" th:attr="data-page='${page.number-1}'" class="item" th:unless="${page.first}">上一页</a>
 									<a onclick="page(this)" th:attr="data-page='${page.number-1}'" class="item" th:unless="${page.last}">下一页</a>
 								</div>
-								<a class="ui rigth floated teal basic button">新增</a>
+								<a th:href="@{/admin/blogs/input}" class="ui right floated teal basic button">新增</a>
 							</th>
 						</tr>
 					</tfoot>
 				</table>
+				
+				<div class="ui success message" th:unless="${#strings.isEmpty(message)}">
+					<i class="close icon"></i>
+					<div class="header">提示：</div>
+					<p th:text="${message}">恭喜，操作成功！</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -191,6 +202,7 @@
 		}
 		
 		$("#search-btn").click(function() {
+			$("[name='page']").val(0);
 			loaddata();
 		});
 		
@@ -202,6 +214,15 @@
 				page: $("[name='page']").val()
 			});
 		}
+	
+		// 消息提示关闭初始化
+		$('message .close').on('click', function() {
+			$(this).closest('.message').transition('fade');
+		});
+		
+		$('#clear-btn').on('click', function() {
+			$('.ui.type.dropdown').dropdown('clear');
+		})
 	</script>
 </body>
 </html>
