--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -46,8 +46,8 @@
 	<div class="ui attached pointing menu">
 		<div class="ui container">
 			<div class="right menu">
-				<a href="#" class="item">发布</a>
-				<a href="#" class="teal active item">列表</a>
+				<a href="#" th:href="@{/admin/blogs/input}" class="item">发布</a>
+				<a href="#" th:href="@{/admin/blogs}" class="teal item active">列表</a>
 			</div>
 		</div>
 	</div>
@@ -96,7 +96,7 @@
 							<th>标题</th>
 							<th>类型</th>
 							<th>推荐</th>
-							<th>草稿/发布</th>
+							<th>状态</th>
 							<th>更新时间</th>
 							<th>操作</th>
 						</tr>
@@ -107,7 +107,7 @@
 							<td th:text="${blog.title}">刻意联系清单</td>
 							<td th:text="${blog.type.name}">认知升级</td>
 							<td th:text="${blog.recommend} ? '是' : '否'">是</td>
-							<td th:text="${blog.published} ? '草稿' : '发布'">草稿</td>
+							<td th:text="${blog.published} ? '发布' : '草稿'">草稿</td>
 							<td th:text="${blog.updateTime}">2021-11-11 11:11</td>
 							<td>
 								<a th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini teal basic button">编辑</a>
