备份代码。（p.s. 补充评论头像，并测试js代码。）

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -569,21 +569,23 @@ h5,h6{font-size:1em;}
 					<div th:fragment="commentList">
 						<div class="ui threaded comments" style="max-width: 100%;">
 							<h3 class="ui dividing header">评论</h3>
-							<div class="comment">
+							<div class="comment" th:each="comment:${comments}">
 								<a class="avatar"> <img
-									src="https://unsplash.it/100/100?image=1005">
+									src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">
 								</a>
 								<div class="content">
-									<a class="author">Matt</a>
+									<a class="author" th:text="${comment.nickname}">Matt</a>
 									<div class="metadata">
-										<span class="date">Today at 5:42PM</span>
+										<span class="date" th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}">Today at 5:42PM</span>
 									</div>
-									<div class="text">How artistic!</div>
+									<div class="text" th:text="${comment.content}">How artistic!</div>
 									<div class="actions">
-										<a class="reply" data-commentid="1" data-commentnickname="Matt" onclick="rely(this)">回复</a>
+										<a class="reply" data-commentid="1" data-commentnickname="Matt" 
+										th:attr="data-commentid=${comment.id},data-commentnickname=${comment.nickname}" onclick="rely(this)">回复</a>
 									</div>
 								</div>
 							</div>
+							<!--/*-->
 							<div class="comment">
 								<a class="avatar"> <img
 									src="https://unsplash.it/100/100?image=1005">
@@ -634,6 +636,7 @@ h5,h6{font-size:1em;}
 									</div>
 								</div>
 							</div>
+							<!--*/-->
 						</div>
 					</div>
 				</div>
@@ -835,11 +838,15 @@ h5,h6{font-size:1em;}
 			}
 		});
 		
+		$(function() {
+			$("#comment-container").load(/*[[@{/comments/{id}(id=${blog.id})}]]*/"");
+		});
+		
 		$('#commentpost-btn').click(function() {
 			var boo = $('.ui.form').form('validate form');
 			if (boo) {
 				console.log('校验成功');
-				
+				postData();
 			} else {
 				console.log('校验失效');
 			}
