--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -584,7 +584,10 @@ h5,h6{font-size:1em;}
 									th:src="@{${comment.avatar}}">
 								</a>
 								<div class="content">
-									<a class="author" th:text="${comment.nickname}">Matt</a>
+									<a class="author">
+										<span th:text="${comment.nickname}">Matt</span>
+										<div class="ui mini basic teal left pointing label m-padding-mini" th:if="${comment.adminComment}">博主</div>
+									</a>
 									<div class="metadata">
 										<span class="date"
 											th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}">Today
@@ -607,7 +610,9 @@ h5,h6{font-size:1em;}
 										</a>
 										<div class="content">
 											<a class="author" th:text="${reply.nickname}">
-												<span th:text="${reply.nickname}">Matt</span>&nbsp;<span th:text="|@ ${reply.parentComment.nickname}|" class="m-teal">@小红</span>
+												<span th:text="${reply.nickname}">Matt</span>
+												<div class="ui mini basic teal left pointing label m-padding-mini" th:if="${reply.adminComment}">博主</div>
+												&nbsp;<span th:text="|@ ${reply.parentComment.nickname}|" class="m-teal">@小红</span>
 											</a>
 											<div class="metadata">
 												<span class="date"
@@ -691,13 +696,13 @@ h5,h6{font-size:1em;}
 						<div class="field m-mobile-wide m-margin-bottom-small">
 							<div class="ui left icon input">
 								<i class="user icon"></i> <input type="text" name="nickname"
-									placeholder="姓名">
+									placeholder="姓名" th:value="${session.user} != null ? ${session.user.nickname}">
 							</div>
 						</div>
 						<div class="field m-mobile-wide m-margin-bottom-small">
 							<div class="ui left icon input">
 								<i class="mail icon"></i> <input type="text" name="email"
-									placeholder="邮箱">
+									placeholder="邮箱" th:value="${session.user} != null ? ${session.user.email}">
 							</div>
 						</div>
 						<div class="field  m-margin-bottom-small m-mobile-wide">
@@ -826,7 +831,7 @@ h5,h6{font-size:1em;}
 			position : 'left center'
 		});
 
-		var serverurl = "127.0.0.1:8080"
+		var serverurl = "127.0.0.1:8080" // TODO: replace actual domain
 		var url = /*[[@{/blog/{id}(id=${blog.id})}]]*/"";
 
 		var qrcode = new QRCode("qrcode", {
@@ -903,7 +908,7 @@ h5,h6{font-size:1em;}
 				"email" : $("[name='email']").val(),
 				"content" : $("[name='content']").val()
 			}, function(responseTxt, statusTxt, xhr) {
-				$(windows).scrollTo($('#comment-container', 500));
+				// $(windows).scrollTo($('#comment-container', 500));
 				clearContent();
 			});
 		}
