--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -6,7 +6,8 @@
 <title>关于我</title>
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-<link rel="stylesheet" href="../static/css/me.css" th:href="@{'/css/me.css'}">
+<link rel="stylesheet" href="../static/css/me.css"
+	th:href="@{'/css/me.css'}">
 </head>
 <body>
 
@@ -18,12 +19,11 @@
 				<h2 class="ui teal header item">Blog</h2>
 				<a href="#" class="m-item item m-mobile-hide"><i
 					class="home icon"></i>首页</a> <a href="#"
-					class="m-item item m-mobile-hide"><i class="idea icon"></i>分类</a>
+					class="m-item item m-mobile-hide"><i class="idea icon"></i>分类</a> <a
+					href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>标签</a>
 				<a href="#" class="m-item item m-mobile-hide"><i
-					class="tags icon"></i>标签</a> <a href="#"
-					class="m-item item m-mobile-hide"><i class="clone icon"></i>归档</a>
-				<a href="#" class="active m-item item m-mobile-hide"><i
-					class="info icon"></i>关于我</a>
+					class="clone icon"></i>归档</a> <a href="#"
+					class="active m-item item m-mobile-hide"><i class="info icon"></i>关于我</a>
 				<!-- 搜索框 -->
 				<div class="right m-item item m-mobile-hide">
 					<div class="ui icon inverted transparent input">
@@ -46,37 +46,46 @@
 			<div class="ui stackable grid">
 				<div class="eleven wide column">
 					<div class="ui segment">
-						<img alt="" src="https://unsplash.it/800/600?image=1005" class="ui rounded image">
+						<img alt="" src="https://unsplash.it/800/600?image=1005"
+							class="ui rounded image">
 					</div>
 				</div>
 				<div class="five wide column">
-					<div class="top attached segment">
+					<div class="ui top attached segment">
 						<div class="ui header">关于我</div>
 					</div>
-					<div class="ui attached segement">
+					<div class="ui attached segment">
 						<p class="m-text">每一次走进大自然，嗅着树林散发的清香，注视朴素的枝叶，这是走向內心丰富精神生活的方式。</p>
 						<p class="m-text">每一次走进大自然，嗅着树林散发的清香，注视朴素的枝叶，这是走向內心丰富精神生活的方式。</p>
 					</div>
-					<div class="ui attached segement">
-						<div class="ui orange basic left pointing label m-margin-tb-tiny">动漫</div>
-						<div class="ui orange basic left pointing label m-margin-tb-tiny">动漫</div>
-						<div class="ui orange basic left pointing label m-margin-tb-tiny">动漫</div>
-						<div class="ui orange basic left pointing label m-margin-tb-tiny">动漫</div>
+					<div class="ui attached segment">
+						<div class="ui orange basic left pointing label">编程</div>
+						<div class="ui orange basic left pointing label">写作</div>
+						<div class="ui orange basic left pointing label">思考</div>
+						<div class="ui orange basic left pointing label">运动</div>
 					</div>
-					<div class="ui attached segement">
-						<div class="ui orange teal left pointing label m-margin-tb-tiny">动漫</div>
-						<div class="ui orange teal left pointing label m-margin-tb-tiny">动漫</div>
-						<div class="ui orange teal left pointing label m-margin-tb-tiny">动漫</div>
-						<div class="ui orange teal left pointing label m-margin-tb-tiny">动漫</div>
+					<div class="ui attached segment">
+						<div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
+						<div class="ui teal basic left pointing label m-margin-tb-tiny">JavaScript</div>
+						<div class="ui teal basic left pointing label m-margin-tb-tiny">Node</div>
+						<div class="ui teal basic left pointing label m-margin-tb-tiny">React</div>
+						<div class="ui teal basic left pointing label m-margin-tb-tiny">RN</div>
+						<div class="ui teal basic left pointing label m-margin-tb-tiny">MYSQL</div>
+						<div class="ui teal basic left pointing label m-margin-tb-tiny">...</div>
 					</div>
-					<div class="ui bottom attached segement">
-						<a href="#" class="ui circular icon button"><i class="github icon"></i></a>
-						<a href="#" class="ui circular icon button wechat"><i class="weixin icon"></i></a>
-						<a href="#" class="ui circular icon button qq" data-content="784803793" data-position="bottom center"><i class="qq icon"></i></a>
+					<div class="ui bottom attached segment">
+						<a href="#" class="ui circular icon button"><i
+							class="github icon"></i></a> <a href="#"
+							class="ui circular icon button wechat"><i class="weixin icon"></i></a>
+						<a href="#" class="ui circular icon button qq"
+							data-content="784803793" data-position="bottom center"><i
+							class="qq icon"></i></a>
 					</div>
-					
+
 					<div class="ui wechat-qr flowing popup transition hidden">
-						<img alt="" src="./static/images/wechat.jpg" th:src="@{'/images/wechat.jpg'}" class="ui rounded image" style="width: 110px;">
+						<img alt="" src="./static/images/wechat.jpg"
+							th:src="@{'/images/wechat.jpg'}" class="ui rounded image"
+							style="width: 110px;">
 					</div>
 				</div>
 			</div>
@@ -85,14 +94,16 @@
 
 
 	<!-- 底部footer -->
-	<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padding-tb-massive">
+	<footer th:replace="_fragments :: footer"
+		class="ui inverted vertical segment m-padding-tb-massive">
 		<div class="ui center aligned container">
 			<div class="ui inverted divided stackable grid">
 				<div class="three wide column">
 					<div class="ui inverted link list">
 						<div class="item">
-							<img src="../static/images/wechat.jpg" th:src="@{'/images/wechat.jpg'}" class="ui rounded image"
-								alt="" style="width: 110px;">
+							<img src="../static/images/wechat.jpg"
+								th:src="@{'/images/wechat.jpg'}" class="ui rounded image" alt=""
+								style="width: 110px;">
 						</div>
 					</div>
 				</div>
@@ -127,23 +138,23 @@
 				2016 - 2017 Lirenmi Designed by Lirenmi</p>
 		</div>
 	</footer>
-	
+
 	<!--/*/<th:block th:replace="_fragments :: script">/*/-->
 	<script
 		src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 	<script
 		src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 	<!--/*/</th:block>/*/-->
-	
+
 	<script>
 		$('.menu.toggle').click(function() {
 			$('.m-item').toggleClass('m-mobile-hide');
 		});
 		$('.qq').popup();
 		$('.wechat').popup({
-			popup: $('.wechat-qr'),
-			on: 'hover',
-			position: 'bottom center'
+			popup : $('.wechat-qr'),
+			on : 'hover',
+			position : 'bottom center'
 		});
 	</script>
 </body>
