--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -527,30 +527,32 @@ h5,h6{font-size:1em;}
 				</div>
 
 				<!--赞赏-->
-				<div class="ui center aligned basic segment">
-					<button id="payButton" class="ui orange basic circular button">赞赏</button>
-				</div>
-				<div class="ui payQR flowing popup transition hidden">
-					<div class="ui orange basic label">
-						<div class="ui images" style="font-size: inherit !important;">
-							<div class="image">
-								<img src="../static/images/wechat.jpg" alt=""
-									th:src="@{/images/wechat.jpg}"
-									class="ui rounded bordered image" style="width: 120px">
-								<div>支付宝</div>
-							</div>
-							<div class="image">
-								<img src="../static/images/wechat.jpg" alt=""
-									th:src="@{/images/wechat.jpg}"
-									class="ui rounded bordered image" style="width: 120px">
-								<div>微信</div>
+				<div th:if="${blog.appreciation}">
+					<div class="ui center aligned basic segment">
+						<button id="payButton" class="ui orange basic circular button">赞赏</button>
+					</div>
+					<div class="ui payQR flowing popup transition hidden">
+						<div class="ui orange basic label">
+							<div class="ui images" style="font-size: inherit !important;">
+								<div class="image">
+									<img src="../static/images/wechat.jpg" alt=""
+										th:src="@{/images/wechat.jpg}"
+										class="ui rounded bordered image" style="width: 120px">
+									<div>支付宝</div>
+								</div>
+								<div class="image">
+									<img src="../static/images/wechat.jpg" alt=""
+										th:src="@{/images/wechat.jpg}"
+										class="ui rounded bordered image" style="width: 120px">
+									<div>微信</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 
 			</div>
-			<div class="ui attached positive message">
+			<div class="ui attached positive message" th:if="${blog.shareStatement}">
 				<!--博客信息-->
 				<div class="ui middle aligned grid">
 					<div class="eleven wide column">
@@ -572,7 +574,7 @@ h5,h6{font-size:1em;}
 					</div>
 				</div>
 			</div>
-			<div class="ui bottom attached segment">
+			<div class="ui bottom attached segment" th:if="blog.commentabled">
 				<!--留言区域列表-->
 				<div id="comment-container" class="ui teal segment">
 					<div th:fragment="commentList">
@@ -831,7 +833,7 @@ h5,h6{font-size:1em;}
 			position : 'left center'
 		});
 
-		var serverurl = "127.0.0.1:8080" // TODO: replace actual domain
+		var serverurl = /*[[#{blog.serurl}]]*/"127.0.0.1:8080" // TODO: replace actual domain
 		var url = /*[[@{/blog/{id}(id=${blog.id})}]]*/"";
 
 		var qrcode = new QRCode("qrcode", {
@@ -887,7 +889,7 @@ h5,h6{font-size:1em;}
 
 		$(function() {
 			$("#comment-container").load(
-					/*[[@{/comments/{id}(id=${blog.id})}]]*/"");
+					/*[[@{/comments/{id}(id=${blog.id})}]]*/"comments/6");
 		});
 
 		$('#commentpost-btn').click(function() {
