--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -145,13 +145,13 @@
 							<div class="ui two column grid">
 								<div class="column"><i class="idea icon"></i>分类</div>
 								<div class="right aligned column">
-									<a href="#" target="_blank">more<i class="angle double right icon"></i></a>
+									<a href="#" th:href="@{/types/-1}" target="_blank">more<i class="angle double right icon"></i></a>
 								</div>
 							</div>
 						</div>
 						<div class="ui teal segment">
 							<div class="ui fluid vertical menu">
-								<a href="#" class="item" th:each="type : ${types}">
+								<a href="#" th:href="@{/types/{id}(id=${type.id})}" target="_blank" class="item" th:each="type : ${types}">
 									<span th:text="${type.name}">学习日志</span>
 									<div class="ui teal basic left pointing label" th:text="${#arrays.length(type.blogs)}">13</div>
 								</a>
@@ -170,7 +170,7 @@
 							<div class="ui two column grid">
 								<div class="column"><i class="tags icon"></i>标签</div>
 								<div class="right aligned column">
-									<a href="#" target="_blank">more<i class="angle double right icon"></i></a>
+									<a href="#" th:href="@{/tags/-1}" target="_blank">more<i class="angle double right icon"></i></a>
 								</div>
 							</div>
 						</div>
@@ -180,7 +180,7 @@
 								<div class="detail" th:text="${#arrays.length(tag.blogs)}">13</div>
 							</a>
 							<!--/*-->
-							<a href="#" class="ui teal basic left pointing label m-margin-tb-tiny" target="_blank">方法论<div class="detail">13</div></a>
+							<a href="#" th:href="@{/tags/{id}(id=${tag.id})}" class="ui teal basic left pointing label m-margin-tb-tiny" target="_blank">方法论<div class="detail">13</div></a>
 							<a href="#" class="ui teal basic left pointing label m-margin-tb-tiny" target="_blank">方法论<div class="detail">13</div></a>
 							<a href="#" class="ui teal basic left pointing label m-margin-tb-tiny" target="_blank">方法论<div class="detail">13</div></a>
 							<!--*/-->
